syntax = "proto3";

option go_package="github.com/P3rCh1/chat-server/proto/sessionpb";

package sesionpb;

service Session {
    rpc Verify (VerifyRequest) returns (VerifyResponse);
    rpc Generate(GenerateRequest) returns (GenerateResponse);
}

message VerifyRequest {
    string token = 1;
}

message VerifyResponse {
    int32 id = 1;
}

message GenerateRequest {
    int32 id = 1;
}

message GenerateResponse {
    string token = 1;
}

